# python-dev-framework

./: .gitignore  .lsp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/adr/: 001-python-dev-framework-architecture.md  002-two-layer-enforcement-model.md  003-configuration-strictness-levels.md  004-prescribed-dependencies.md  005-testing-coverage-strategy.md  006-e2e-testing-strategy.md  007-plugin-dogfooding.md  008-linting-rule-strategy.md  009-lsp-integration.md  010-python-version-compatibility.md  011-type-import-standards.md  012-source-directory-layout.md  013-immutability-safety-patterns.md  014-design-patterns-skill.md  015-protected-branch-push-validation.md  README.md
docs/tdd/: 001-plugin-implementation.md  002-gcp-logging-integration.md  003-python-version-patterns.md  004-type-import-patterns.md  005-directory-layout-templates.md  006-immutability-patterns.md  007-push-validation-patterns.md
hooks/: hooks.json
hooks/scripts/: config.py  format_python.py  validate_git.py
scripts/: __init__.py  setup_ide.py
skills/design-patterns/: SKILL.md
skills/design-patterns/references/: anti-patterns.md  behavioral-patterns.md  creational-patterns.md  patterns.md  python-idioms.md  solid-anti.md  solid-principles.md  structural-patterns.md
skills/plugin-versioning/: SKILL.md
skills/python-standards/: SKILL.md
skills/python-standards/references/: logging-patterns.md
tests/: __init__.py  conftest.py  test_config.py  test_directory_layout.py  test_format_python.py  test_immutability.py  test_t201_config.py  test_validate_git.py
tests/e2e/: __init__.py  conftest.py  helpers.py  test_directory_layout.py  test_format_hook.py  test_immutability.py  test_t201_enforcement.py  test_type_imports.py  test_validate_hook.py  test_version_hook.py
