[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-dev-framework"
version = "0.1.0"
description = "Opinionated Python development enforcement for Claude Code"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "World Central Kitchen" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
keywords = ["python", "linting", "formatting", "git-workflow", "claude-code"]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "mypy>=1.11",
    "ruff>=0.6",
    "black>=24.0",
    "pre-commit>=3.8",
    "tomli>=2.0; python_version < '3.11'",
    "useful-types>=0.2.1",
]

[project.scripts]
setup-ide = "scripts.setup_ide:main"

[project.urls]
Repository = "https://github.com/WorldCentralKitchen/python-dev-framework"

[tool.hatch.build.targets.wheel]
packages = ["hooks/scripts", "scripts"]

# ──────────────────────────────────────────────────────────────
# RUFF: Linting
# ──────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["hooks/scripts", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "T",    # flake8-print (T201 bans print - TDD-002)
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate (commented-out code)
    "PL",   # Pylint
    "RUF",  # Ruff-specific rules
    "SLF",  # flake8-self (private member access)
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "E731",     # Allow lambda assignments (ADR-008)
]

[tool.ruff.lint.pylint]
max-statements = 100  # ADR-008: function length limit

[tool.ruff.lint.isort]
known-first-party = ["config", "format_python", "validate_git"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.flake8-type-checking]
strict = true  # TDD-004: Aggressively move imports to TYPE_CHECKING

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "PLR2004", "TCH002", "TCH003", "SLF001", "T201"]
"hooks/scripts/*.py" = ["T201", "TCH001"]  # Hooks use print for stdout protocol; runtime imports needed
"scripts/*.py" = ["T201"]  # CLI scripts use print for user output
"src/*/_internal/*.py" = ["SLF001"]  # TDD-005: Allow internal-to-internal access

# ──────────────────────────────────────────────────────────────
# BLACK: Formatting
# ──────────────────────────────────────────────────────────────
[tool.black]
target-version = ["py312"]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.ruff_cache
    | \.venv
    | build
    | dist
)/
'''

# ──────────────────────────────────────────────────────────────
# MYPY: Type Checking (strict mode)
# ──────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = ["tests", "tests.*"]
disallow_untyped_defs = false
disallow_untyped_decorators = false
disable_error_code = ["import-not-found"]  # Tests use sys.path.insert for hook imports

# ──────────────────────────────────────────────────────────────
# PYTEST: Testing
# ──────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["hooks/scripts"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "e2e: end-to-end tests requiring Claude CLI",
]

[tool.coverage.run]
source = ["hooks/scripts"]
branch = true

[tool.coverage.report]
fail_under = 75
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
